<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff792f"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <ImageView
        android:id="@+id/titleLabel"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:src="@drawable/unnamed" />
    
    <Button
        android:id="@+id/checklistButton"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:background="#543d2a"
        android:textColor="#fbf5e4"        
        android:text="@string/checklist" />
    
    <Button
        android:id="@+id/disasterButton"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:background="#543d2a"
        android:textColor="#fbf5e4"     
        android:text="@string/disasterplan" />
    
    <Button
        android:id="@+id/inventoryButton"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:background="#543d2a"
        android:textColor="#fbf5e4"     
        android:text="@string/inventory" />
    
    <Button
        android:id="@+id/memberButton"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:background="#543d2a"
        android:textColor="#fbf5e4"        
        android:text="@string/member" />
    
    <Button
        android:id="@+id/emergencyButton"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:background="#543d2a"
        android:textColor="#fbf5e4"       
        android:text="@string/emergency" />
    
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="30dp"
        android:background="#543d2a"
        android:textColor="#e7bb98"       
        android:text="@string/logout" />
    

</LinearLayout>
