<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pandapanic.ToDoListActivity" >

    <TextView
        android:id ="@+id/list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planList" />
    
    <EditText
        android:id = "@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc" />
    
     <ListView
        android:id="@+id/toDoListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_label"
        android:layout_marginTop="55dp" >
    </ListView>
    
     <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toDoListItem"
        android:layout_marginTop="20dp"
        android:text="@string/Add" />
    

</RelativeLayout>
