<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pandapanic.LoginActivity" >

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtPassword"
        android:layout_marginBottom="198dp"
        android:hint="@string/username"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_alignRight="@+id/txtPassword"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="14dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

</RelativeLayout>
